# Quant-Trading-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backtest/: __init__.py  costs.py  engine.py  metrics.py
config/: __init__.py  settings.py
core/: __init__.py  database.py  engine.py  exchange.py  position.py  risk.py
ml/: __init__.py  features.py  labels.py  train.py
ml/models/: .gitkeep
results/: backtest_verdict.md
scripts/: __init__.py  fetch_data.py  reset_halt.py  run_backtest.py  run_link_premium_backtest.py  run_live.py  run_onchain_backtest.py  run_paper.py  run_premium_backtest.py
src/: __init__.py
src/onchain/: __init__.py  coinbase_premium_fetcher.py  coinmetrics_fetcher.py  features.py  premium_features.py
tests/: test_backtest_engine.py  test_coinbase_premium_pit_leakage.py  test_costs.py  test_dashboard.py  test_database.py  test_features_labels.py  test_fetch_data.py  test_funding_pit_leakage.py  test_link_premium_pit_leakage.py  test_metrics.py  test_onchain_pit_leakage.py  test_order_gateway.py  test_paper_trading.py  test_position.py  test_realized_vol_pit_leakage.py  test_risk_halt.py  test_settings_guardrails.py  test_train_walkforward.py
web/: __init__.py  app.py  data.py  render.py
web/templates/: index.html
